[gd_scene load_steps=14 format=3 uid="uid://c8w6423geib2d"]

[ext_resource type="Script" uid="uid://cvmosgnv83yw4" path="res://Scripts/SquadSelect.gd" id="1_7j665"]
[ext_resource type="FontFile" uid="uid://csnhk3q4gx0" path="res://Fonts/magofonts/mago1.ttf" id="2_ccg3s"]
[ext_resource type="PackedScene" uid="uid://cl3riea4m8lk6" path="res://Scenes/UnitCard.tscn" id="2_cf6c6"]
[ext_resource type="PackedScene" uid="uid://bpsujbhwy03a0" path="res://Scenes/Meks_Scenes/PLAYER/M1.scn" id="3_b77vg"]
[ext_resource type="FontFile" uid="uid://buw362wjb8o8d" path="res://Fonts/magofonts/mago2.ttf" id="3_bjpxf"]
[ext_resource type="PackedScene" uid="uid://bnqjqpd5lkacg" path="res://Scenes/Meks_Scenes/PLAYER/M2.scn" id="4_vibpu"]
[ext_resource type="PackedScene" uid="uid://bmuido3r5ktn4" path="res://Scenes/Meks_Scenes/PLAYER/R1.scn" id="5_mbtl8"]
[ext_resource type="PackedScene" uid="uid://b5ri7lnc63v8o" path="res://Scenes/Meks_Scenes/PLAYER/R2.scn" id="6_c3q6l"]
[ext_resource type="PackedScene" uid="uid://d4kyifny6a844" path="res://Scenes/Meks_Scenes/PLAYER/R3.scn" id="7_2lebq"]
[ext_resource type="PackedScene" uid="uid://ct1ugkg5n215q" path="res://Scenes/Meks_Scenes/PLAYER/R4.scn" id="8_yhcsf"]
[ext_resource type="PackedScene" uid="uid://dok7nyn6rfklj" path="res://Scenes/Meks_Scenes/PLAYER/S2.scn" id="9_wkifx"]
[ext_resource type="PackedScene" uid="uid://f0axh6ymw2lc" path="res://Scenes/Meks_Scenes/PLAYER/S3.scn" id="10_vmrk5"]
[ext_resource type="FontFile" uid="uid://dgugahs6bc7so" path="res://Fonts/magofonts/mago3.ttf" id="11_b77vg"]

[node name="SquadSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1134.0
offset_bottom = -626.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7j665")
unit_card_scene = ExtResource("2_cf6c6")
melee_units = Array[PackedScene]([ExtResource("3_b77vg"), ExtResource("4_vibpu")])
ranged_units = Array[PackedScene]([ExtResource("5_mbtl8"), ExtResource("6_c3q6l"), ExtResource("7_2lebq"), ExtResource("8_yhcsf"), ExtResource("9_wkifx"), ExtResource("10_vmrk5")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 168.0
offset_right = 239.0
offset_bottom = 221.0

[node name="CardGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 4

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_b77vg")
theme_override_font_sizes/font_size = 32
text = "Select Squad"

[node name="SelectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ccg3s")

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bjpxf")
theme_override_font_sizes/font_size = 32
text = "Confirm"
